[package]
name = "groq"
version = "0.1.0"
authors = ["Steven Yang <steven.yang@s4i.io>"]
edition = "2018"
[dependencies]
reqwest = { version = "0.12.2", features = ["json"] }
serde_json = "1.0.74"
tokio = { version = "1.17.0", features = ["full"] }
thiserror = "1.0"
async-std = { version = "1.12.0", features = ["attributes"] }
criterion = { version = "0.5.1" }
